feat: keep orginal datetime type when exporting categorised date/datetime variables